# LessonInk

./: .gitignore  README.md  index.html  overview.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-desktop-build.yml
docs/: first-real-lesson-validation-2026-05-30.md
docs/decisions/: adr-001-offline-first.md
docs/product/: feature-list.md  mvp-scope.md  roadmap.md  user-flow.md
docs/technical/: architecture.md  canvas-engine.md  file-format.md  local-storage.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx  providers.tsx  routes.tsx
src/features/board/: board.store.ts  board.types.ts
src/features/canvas/: canvas.store.ts  canvas.types.ts
src/features/documents/: document.store.ts  document.types.ts  lessoninkFile.types.ts  lessoninkFileService.ts  lessoninkSerializer.ts  lessoninkValidator.ts
src/features/presenter/: PresenterMode.tsx  presenter.store.ts
src/features/settings/: SettingsPanel.tsx  settings.store.ts
src/features/timer/: TimerPanel.tsx  timer.store.ts
src/pages/: BoardPage.tsx  HomePage.tsx
src/shared/components/: AppHeader.tsx
src/shared/utils/: date.ts
src/storage/: autosave.ts  localFileSystem.ts  recentFiles.ts
src/styles/: globals.css  variables.css
tests/unit/: autosave.test.ts  boardStore.test.ts  canvasHistory.test.ts  coordinateTransform.test.ts  lessoninkSerializer.test.ts  lessoninkValidator.test.ts  objectTransforms.test.ts  pageRange.test.ts  pdfExporter.test.ts  pngExporter.test.ts  presenterStore.test.ts  timer.store.test.ts
(+27 files in other folders)
