[package]
name = "mushroomlearning-desktop"
version = "0.1.0"
description = "Offline-first desktop whiteboard for live online teaching"
authors = ["MushroomLearning"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
